src/z80asm/z80asm2/t/20-preproc/expected/float_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/float_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/float_01.asm...
t/20-preproc/input/float_01.asm:1:9: error: Expected float type after SETFLOAT
    setfloat
            ^
t/20-preproc/input/float_01.asm:2:10: error: Invalid float format: xxx
    setfloat xxx
             ^
t/20-preproc/input/float_01.asm:2:10: note: Valid float formats are: am9511, genmath, ieee16, ieee32, ieee64, math48, mbf40, mbf64, mbfs, z80, z88, zx, zx81
    setfloat xxx
             ^
t/20-preproc/input/float_01.asm:3:18: error: Unexpected token: "xxx"
    setfloat genmath xxx
                     ^
t/20-preproc/input/float_01.asm:4:6: error: Expected float expressions after FLOAT
    float
         ^
t/20-preproc/input/float_01.asm:5:9: error: Unexpected token in float expression: "\n"
    float 1+
            ^
t/20-preproc/input/float_01.asm:6:7: error: Unexpected token in float expression: ","
    float ,
          ^
